Make ExamplesFieldFuzzer ignore examples created by cats for composed schemas